--- a/src/main/resources/assets/meetyourfight/lang/zh_cn.json
+++ b/src/main/resources/assets/meetyourfight/lang/zh_cn.json
@@ -24,7 +24,7 @@
   "item.meetyourfight.cocktail_shotgun.desc": "有几率射出负面的喷溅型药水",
   "item.meetyourfight.velvet_fortune": "幸运天鹅绒",
   
-  "item.meetyourfight.desc.luck": "会被运气影响",
+  "item.meetyourfight.desc.luck": "会被幸运影响",
   
   "item.meetyourfight.fossil_bait": "化石之饵",
   "item.meetyourfight.fossil_bait.desc": "召唤沼泽巨颌怪",
