--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -76,6 +76,9 @@
 	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "Dame Fortuna shoots",
 	"subtitles.meetyourfight.entity.dame_fortuna.chips.start": "Chips produced",
 	"subtitles.meetyourfight.entity.dame_fortuna.chips.fire": "Chips fired",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.start": "Card drawn",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.right": "Correct guess",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.wrong": "Wrong guess",
 	"subtitles.meetyourfight.entity.swampjaw.idle": "Swampjaw growls",
 	"subtitles.meetyourfight.entity.swampjaw.hurt": "Swampjaw hurt",
 	"subtitles.meetyourfight.entity.swampjaw.death": "Swampjaw dies",
