Added precise numbers to item tooltips

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -3,9 +3,9 @@
 	"item.meetyourfight.haunted_bell.desc": "Summons Bellringer",
 	"item.meetyourfight.phantoplasm": "Phantoplasm",
 	"item.meetyourfight.passages_toll": "Passage's Toll",
-	"item.meetyourfight.passages_toll.desc": "Teleports you up to 16 blocks through any surface",
+	"item.meetyourfight.passages_toll.desc": "Teleports you up to %1$d blocks through any surface",
 	"item.meetyourfight.spectres_eye": "Spectre's Eye",
-	"item.meetyourfight.spectres_eye.desc": "Reveals nearby hostile mobs",
+	"item.meetyourfight.spectres_eye.desc": "Reveals hostile mobs within %1$d blocks",
 	"item.meetyourfight.spectres_grasp": "Spectre's Grasp",
 	"item.meetyourfight.phantasmal_rifle": "Phantasmal Rifle",
 	"item.meetyourfight.phantasmal_rifle.desc": "Projectiles go through blocks",
@@ -15,16 +15,16 @@
 	"item.meetyourfight.devils_ante.desc": "Summons Dame Fortuna",
 	"item.meetyourfight.fortunes_favor": "Fortune's Favor",
 	"item.meetyourfight.slicers_dice": "Slicer's Dice",
-	"item.meetyourfight.slicers_dice.desc": "Attacks sometimes do more damage",
+	"item.meetyourfight.slicers_dice.desc": "%1$d%% chance for attacks to do %2$d%% more damage",
 	"item.meetyourfight.ace_of_iron": "Ace of Iron",
-	"item.meetyourfight.ace_of_iron.desc": "Sometimes negates incoming attacks",
+	"item.meetyourfight.ace_of_iron.desc": "%1$d%% chance to negate incoming attacks",
 	"item.meetyourfight.cocktail_cutlass": "Cocktail Cutlass",
-	"item.meetyourfight.cocktail_cutlass.desc": "Attacks sometimes give potion effects",
+	"item.meetyourfight.cocktail_cutlass.desc": "%1$d%% chance for attacks give potion effects",
 	"item.meetyourfight.cocktail_shotgun": "Jägershot",
-	"item.meetyourfight.cocktail_shotgun.desc": "Sometimes fires negative splash potions",
+	"item.meetyourfight.cocktail_shotgun.desc": "%1$d%% chance to also fire negative splash potions",
 	"item.meetyourfight.velvet_fortune": "Velvet Fortune",
 	
-	"item.meetyourfight.desc.luck": "Affected by luck",
+	"item.meetyourfight.desc.luck": "Chance affected by luck",
 	
 	"item.meetyourfight.fossil_bait": "Fossil Bait",
 	"item.meetyourfight.fossil_bait.desc": "Summons Swampjaw",
@@ -33,7 +33,7 @@
 	"item.meetyourfight.depth_star": "Depth Star",
 	"item.meetyourfight.depth_star.desc": "Can charge a short range shockwave",
 	"item.meetyourfight.caged_heart": "Caged Heart",
-	"item.meetyourfight.caged_heart.desc": "Reduces damage that exceeds 1/4 of max health",
+	"item.meetyourfight.caged_heart.desc": "Reduces damage that exceeds %1$d%% of max health by %2$d%%",
 	"item.meetyourfight.marshy_delight": "Marshy Delight",
 	
 	"item.meetyourfight.dusk_key": "Dusk Key",
@@ -41,9 +41,9 @@
 	"item.meetyourfight.violet_bloom": "Violet Bloom",
 	"item.meetyourfight.twilights_thorn": "Twilight's Thorn",
 	"item.meetyourfight.wilted_ideals": "Wilted Ideals",
-	"item.meetyourfight.wilted_ideals.desc": "Increases all damage dealt",
+	"item.meetyourfight.wilted_ideals.desc": "Increases all damage dealt by %1$d%%",
 	"item.meetyourfight.blossoming_mind": "Blossoming Mind",
-	"item.meetyourfight.blossoming_mind.desc": "Increases experience from mobs",
+	"item.meetyourfight.blossoming_mind.desc": "Increases experience from mobs by %1$d%%",
 	"item.meetyourfight.tomb_planter": "Tomb Planter",
 	"item.meetyourfight.tomb_planter.desc": "Fertilizes where you slain grounded mobs",
 	"item.meetyourfight.petal_cream": "Petal Cream",
