Sound when stunning swampjaw

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -84,6 +84,7 @@
 	"subtitles.meetyourfight.entity.swampjaw.death": "Swampjaw dies",
 	"subtitles.meetyourfight.entity.swampjaw.charge": "Swampjaw charges",
 	"subtitles.meetyourfight.entity.swampjaw.bomb": "Bomb dropped",
+	"subtitles.meetyourfight.entity.swampjaw.stun": "Swampjaw wails",
 	"subtitles.meetyourfight.entity.rosalyne.hurt": "Rosalyne hurt",
 	"subtitles.meetyourfight.entity.rosalyne.death": "Rosalyne dies",
 	"subtitles.meetyourfight.entity.rosalyne.crack": "Rosalyne cracks",
