--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -77,6 +77,7 @@
 	"subtitles.meetyourfight.entity.swampjaw.death": "Gueule-des-marais meurt",
 	"subtitles.meetyourfight.entity.swampjaw.charge": "Gueule-des-marais charge",
 	"subtitles.meetyourfight.entity.swampjaw.bomb": "Bombe larguée",
+	"subtitles.meetyourfight.entity.swampjaw.stun": "Gueule-des-marais charge gémit",
 	"subtitles.meetyourfight.entity.rosalyne.hurt": "Rosalyne blessée",
 	"subtitles.meetyourfight.entity.rosalyne.death": "Rosalyne meurt",
 	"subtitles.meetyourfight.entity.rosalyne.crack": "Rosalyne craque",
