--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -67,17 +67,28 @@
 	"subtitles.meetyourfight.entity.bellringer.idle": "Sonneur gémit",
 	"subtitles.meetyourfight.entity.bellringer.hurt": "Sonneur blessé",
 	"subtitles.meetyourfight.entity.bellringer.death": "Sonneur meurt",
+
 	"subtitles.meetyourfight.entity.dame_fortuna.idle": "Dame Fortuna parle",
 	"subtitles.meetyourfight.entity.dame_fortuna.hurt": "Dame Fortuna blessée",
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "Dame Fortuna meurt",
 	"subtitles.meetyourfight.entity.dame_fortuna.attack": "Dame Fortuna rit",
 	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "Dame Fortuna tire",
+	"subtitles.meetyourfight.entity.dame_fortuna.chips.start": "Jetons produits",
+	"subtitles.meetyourfight.entity.dame_fortuna.chips.fire": "Jetons tirés",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.start": "Carte piochée",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.right": "Bonne réponse",
+	"subtitles.meetyourfight.entity.dame_fortuna.card.wrong": "Mauvaise réponse",
+	"subtitles.meetyourfight.entity.dame_fortuna.spin.start": "Dame Fortuna commence à tourner",
+	"subtitles.meetyourfight.entity.dame_fortuna.spin.stop": "Dame Fortuna arrête de tourner",
+	"subtitles.meetyourfight.entity.dame_fortuna.snap": "Claquement de doigts",
+
 	"subtitles.meetyourfight.entity.swampjaw.idle": "Gueule-des-marais grogne",
 	"subtitles.meetyourfight.entity.swampjaw.hurt": "Gueule-des-marais blessé",
 	"subtitles.meetyourfight.entity.swampjaw.death": "Gueule-des-marais meurt",
 	"subtitles.meetyourfight.entity.swampjaw.charge": "Gueule-des-marais charge",
 	"subtitles.meetyourfight.entity.swampjaw.bomb": "Bombe larguée",
 	"subtitles.meetyourfight.entity.swampjaw.stun": "Gueule-des-marais charge gémit",
+
 	"subtitles.meetyourfight.entity.rosalyne.hurt": "Rosalyne blessée",
 	"subtitles.meetyourfight.entity.rosalyne.death": "Rosalyne meurt",
 	"subtitles.meetyourfight.entity.rosalyne.crack": "Rosalyne craque",
