--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -4,7 +4,7 @@
 
 	"item.meetyourfight.haunted_bell": "Haunted Bell",
 	"item.meetyourfight.haunted_bell.desc": "Summons Bellringer",
-	"item.meetyourfight.haunted_bell.gear": "Diamond",
+	"item.meetyourfight.haunted_bell.gear": "Iron or Diamond",
 	"item.meetyourfight.phantoplasm": "Phantoplasm",
 	"item.meetyourfight.passages_toll": "Passage's Toll",
 	"item.meetyourfight.passages_toll.desc": "Teleports you up to %1$d blocks through any surface",
@@ -17,7 +17,7 @@
 	
 	"item.meetyourfight.devils_ante": "Devil's Ante",
 	"item.meetyourfight.devils_ante.desc": "Summons Dame Fortuna",
-	"item.meetyourfight.devils_ante.gear": "Enchanted diamond",
+	"item.meetyourfight.devils_ante.gear": "Diamond",
 	"item.meetyourfight.fortunes_favor": "Fortune's Favor",
 	"item.meetyourfight.slicers_dice": "Slicer's Dice",
 	"item.meetyourfight.slicers_dice.desc": "%1$d%% chance for attacks to do %2$d%% more damage",
@@ -33,7 +33,7 @@
 	
 	"item.meetyourfight.fossil_bait": "Fossil Bait",
 	"item.meetyourfight.fossil_bait.desc": "Summons Swampjaw",
-	"item.meetyourfight.fossil_bait.gear": "Iron",
+	"item.meetyourfight.fossil_bait.gear": "Stone or Iron",
 	"item.meetyourfight.mossy_tooth": "Mossy Tooth",
 	"item.meetyourfight.bone_raker": "Bone Raker",
 	"item.meetyourfight.depth_star": "Depth Star",
