More fortuna tweaks, but am stagnating a bit here

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -90,6 +90,7 @@
 	"subtitles.meetyourfight.entity.dame_fortuna.spin.start": "Dame Fortuna starts spinning",
 	"subtitles.meetyourfight.entity.dame_fortuna.spin.stop": "Dame Fortuna stops spinning",
 	"subtitles.meetyourfight.entity.dame_fortuna.snap": "Finger snap",
+	"subtitles.meetyourfight.entity.dame_fortuna.clap": "Hands clap",
 
 	"subtitles.meetyourfight.entity.swampjaw.idle": "Swampjaw growls",
 	"subtitles.meetyourfight.entity.swampjaw.hurt": "Swampjaw hurt",
