--- a/src/main/resources/assets/meetyourfight/lang/zh_cn.json
+++ b/src/main/resources/assets/meetyourfight/lang/zh_cn.json
@@ -1,10 +1,10 @@
 {
-    "item.meetyourfight.summon.use": "召唤时会被消耗",
+    	"item.meetyourfight.summon.use": "召唤时会被消耗",
 	"item.meetyourfight.summon.gear": "推荐装备：%s",
 
 	"item.meetyourfight.haunted_bell": "缠魂铃铛",
 	"item.meetyourfight.haunted_bell.desc": "召唤敲钟人",
-    "item.meetyourfight.haunted_bell.gear": "铁质或钻石质",
+    	"item.meetyourfight.haunted_bell.gear": "铁质或钻石质",
 	"item.meetyourfight.phantoplasm": "幽魂质",
 	"item.meetyourfight.passages_toll": "旅人之钟",
 	"item.meetyourfight.passages_toll.desc": "将你传送至最多16格远的任意方块上",
@@ -17,7 +17,7 @@
 	
 	"item.meetyourfight.devils_ante": "恶魔赌注",
 	"item.meetyourfight.devils_ante.desc": "召唤福尔图娜女爵",
-    "item.meetyourfight.devils_ante.gear": "钻石质",
+    	"item.meetyourfight.devils_ante.gear": "钻石质",
 	"item.meetyourfight.fortunes_favor": "命运之眷",
 	"item.meetyourfight.slicers_dice": "切割者之骰",
 	"item.meetyourfight.slicers_dice.desc": "攻击时有概率造成更多伤害",
@@ -25,7 +25,7 @@
 	"item.meetyourfight.ace_of_iron.desc": "有概率无视受到的攻击",
 	"item.meetyourfight.cocktail_cutlass": "甜心鸡尾酒之刃",
 	"item.meetyourfight.cocktail_cutlass.desc": "攻击有概率给予药水效果",
-	"item.meetyourfight.cocktail_shotgun": "猎人之",
+	"item.meetyourfight.cocktail_shotgun": "猎人霰弹枪",
 	"item.meetyourfight.cocktail_shotgun.desc": "有概率射出带负面效果的喷溅型药水",
 	"item.meetyourfight.velvet_fortune": "幸运天鹅绒",
 	
@@ -33,18 +33,18 @@
 	
 	"item.meetyourfight.fossil_bait": "化石之饵",
 	"item.meetyourfight.fossil_bait.desc": "召唤沼泽巨颌怪",
-    "item.meetyourfight.fossil_bait.gear": "石质或铁质",
+    	"item.meetyourfight.fossil_bait.gear": "石质或铁质",
 	"item.meetyourfight.mossy_tooth": "藓牙",
 	"item.meetyourfight.bone_raker": "骨质钉耙",
 	"item.meetyourfight.depth_star": "深境之星",
-	"item.meetyourfight.depth_star.desc": "可以造成短程冲击波",
+	"item.meetyourfight.depth_star.desc": "可以释放短程冲击波",
 	"item.meetyourfight.caged_heart": "囚笼之心",
 	"item.meetyourfight.caged_heart.desc": "降低超过最大生命值25%的伤害",
 	"item.meetyourfight.marshy_delight": "湿软泥泞的佳肴",
 	
 	"item.meetyourfight.dusk_key": "黄昏之钥",
 	"item.meetyourfight.dusk_key.desc": "召唤薄暮之锋，罗莎琳",
-    "item.meetyourfight.dusk_key.gear": "下界合金质",
+    	"item.meetyourfight.dusk_key.gear": "下界合金质",
 	"item.meetyourfight.violet_bloom": "暮光紫罗兰",
 	"item.meetyourfight.twilights_thorn": "胧暮荆棘",
 	"item.meetyourfight.wilted_ideals": "未竟之志",
@@ -52,7 +52,7 @@
 	"item.meetyourfight.blossoming_mind": "绽放之念",
 	"item.meetyourfight.blossoming_mind.desc": "增加生物掉落的经验量",
 	"item.meetyourfight.tomb_planter": "垂死之辉",
-	"item.meetyourfight.tomb_planter.desc": "催熟你杀死生物的地方附近的植物",
+	"item.meetyourfight.tomb_planter.desc": "催熟你杀死生物之处附近的植物",
 	"item.meetyourfight.petal_cream": "花瓣冰淇淋",
 	
 	"item.meetyourfight.music_disc_magnum": "音乐唱片",
@@ -82,7 +82,7 @@
 	"subtitles.meetyourfight.entity.dame_fortuna.death": "福尔图娜女爵：死亡",
 	"subtitles.meetyourfight.entity.dame_fortuna.attack": "福尔图娜女爵：大笑",
 	"subtitles.meetyourfight.entity.dame_fortuna.shoot": "福尔图娜女爵：射击",
-    "subtitles.meetyourfight.entity.dame_fortuna.chips.start": "筹码：生成",
+    	"subtitles.meetyourfight.entity.dame_fortuna.chips.start": "筹码：生成",
 	"subtitles.meetyourfight.entity.dame_fortuna.chips.fire": "筹码：发射",
 	"subtitles.meetyourfight.entity.dame_fortuna.card.start": "卡牌：翻出",
 	"subtitles.meetyourfight.entity.dame_fortuna.card.right": "猜对了",
@@ -97,7 +97,7 @@
 	"subtitles.meetyourfight.entity.swampjaw.death": "沼泽巨颌怪：死亡",
 	"subtitles.meetyourfight.entity.swampjaw.charge": "沼泽巨颌怪：猛冲",
 	"subtitles.meetyourfight.entity.swampjaw.bomb": "炸弹：被投放",
-    "subtitles.meetyourfight.entity.swampjaw.stun": "沼泽巨颌怪：尖啸",
+    	"subtitles.meetyourfight.entity.swampjaw.stun": "沼泽巨颌怪：尖啸",
 
 	"subtitles.meetyourfight.entity.rosalyne.hurt": "罗莎琳：受伤",
 	"subtitles.meetyourfight.entity.rosalyne.death": "罗莎琳：死亡",
