--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -55,6 +55,8 @@
 	"item.meetyourfight.tomb_planter.desc": "Fertilizes where you slain grounded mobs",
 	"item.meetyourfight.petal_cream": "Petal Cream",
 	
+	"item.meetyourfight.music_disc_swampjaw": "Music Disc",
+	"item.meetyourfight.music_disc_swampjaw.desc": "Kain Vinosec - Shadows Falling In Lush Forests",
 	"item.meetyourfight.music_disc_bellringer": "Music Disc",
 	"item.meetyourfight.music_disc_bellringer.desc": "Monkey Warhol - Magnum",
 	"item.meetyourfight.music_disc_rosalyne": "Music Disc",
