--- a/src/main/resources/assets/meetyourfight/lang/ko_kr.json
+++ b/src/main/resources/assets/meetyourfight/lang/ko_kr.json
@@ -36,8 +36,9 @@
 	"item.meetyourfight.caged_heart.desc": "최대 체력의 25%가 넘는 피해를 감소시켜 받습니다.",
 	"item.meetyourfight.marshy_delight": "마쉬 딜라이트",
 	
-	"item.meetyourfight.music_disc_magnum": "음반",
-	"item.meetyourfight.music_disc_magnum.desc": "Monkey Warhol - Magnum",
+	"item.meetyourfight.music_disc_swampjaw": "음반",
+	"item.meetyourfight.music_disc_bellringer": "음반",
+	"item.meetyourfight.music_disc_rosalyne": "음반",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "종을 울리는 자 생성 알",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "운명의 여신 생성 알",
