Song for fortuna commissioned from pinpinneon + texture for bellringer disc

--- a/src/main/resources/assets/meetyourfight/lang/en_us.json
+++ b/src/main/resources/assets/meetyourfight/lang/en_us.json
@@ -60,6 +60,8 @@
 	"item.meetyourfight.music_disc_swampjaw.desc": "Kain Vinosec - Shadows Falling In Lush Forests",
 	"item.meetyourfight.music_disc_bellringer": "Music Disc",
 	"item.meetyourfight.music_disc_bellringer.desc": "Monkey Warhol - Magnum",
+	"item.meetyourfight.music_disc_fortuna": "Music Disc",
+	"item.meetyourfight.music_disc_fortuna.desc": "PinpinNeon - Place Your Bet ~ Life On Red",
 	"item.meetyourfight.music_disc_rosalyne": "Music Disc",
 	"item.meetyourfight.music_disc_rosalyne.desc": "Guifrog - Frog Punch",
 
