Update french translation

--- a/src/main/resources/assets/meetyourfight/lang/fr_fr.json
+++ b/src/main/resources/assets/meetyourfight/lang/fr_fr.json
@@ -1,11 +1,15 @@
 {
+	"item.meetyourfight.summon.use": "Consommé après invocation",
+	"item.meetyourfight.summon.gear": "Équipement recommandé : %s",
+
 	"item.meetyourfight.haunted_bell": "Cloche hantée",
 	"item.meetyourfight.haunted_bell.desc": "Invoque Sonneur",
+	"item.meetyourfight.haunted_bell.gear": "fer ou diamant",
 	"item.meetyourfight.phantoplasm": "Phantoplasme",
 	"item.meetyourfight.passages_toll": "Tribut du passage",
-	"item.meetyourfight.passages_toll.desc": "Vous téléporte jusqu'à 16 blocs à travers une surface",
+	"item.meetyourfight.passages_toll.desc": "Vous téléporte jusqu'à %1$d blocs à travers une surface",
 	"item.meetyourfight.spectres_eye": "Oeuil du spectre",
-	"item.meetyourfight.spectres_eye.desc": "Dévoile les monstres hostiles proches",
+	"item.meetyourfight.spectres_eye.desc": "Dévoile les monstres hostiles à moins de %1$d blocs",
 	"item.meetyourfight.spectres_grasp": "Poigne du spectre",
 	"item.meetyourfight.phantasmal_rifle": "Fusil fantasmal",
 	"item.meetyourfight.phantasmal_rifle.desc": "Les projectiles traversent les blocs",
@@ -13,44 +17,55 @@
 	
 	"item.meetyourfight.devils_ante": "Ante du diable",
 	"item.meetyourfight.devils_ante.desc": "Invoque Dame Fortuna",
+	"item.meetyourfight.devils_ante.gear": "diamant",
 	"item.meetyourfight.fortunes_favor": "Faveur de la fortune",
 	"item.meetyourfight.slicers_dice": "Dé du découpeur",
-	"item.meetyourfight.slicers_dice.desc": "Les attaques font parfois plus de dégâts",
+	"item.meetyourfight.slicers_dice.desc": "%1$d%% de chance qu'une attaque fasse %2$d%% de dégâts en plus",
 	"item.meetyourfight.ace_of_iron": "As de fer",
-	"item.meetyourfight.ace_of_iron.desc": "Annule parfois les attaques reçues",
+	"item.meetyourfight.ace_of_iron.desc": "%1$d%% de chance d'annuler une attaque reçue",
 	"item.meetyourfight.cocktail_cutlass": "Sabre à cocktail",
-	"item.meetyourfight.cocktail_cutlass.desc": "Les attaques donnent parfois des effets de potion",
+	"item.meetyourfight.cocktail_cutlass.desc": "%1$d%% de chance qu'une attaque donne des effets de potion",
 	"item.meetyourfight.cocktail_shotgun": "Jägershot",
-	"item.meetyourfight.cocktail_shotgun.desc": "Tire parfois des potions jetables néfastes",
+	"item.meetyourfight.cocktail_shotgun.desc": "%1$d%% de chance de tirer une potion jetable néfaste",
 	"item.meetyourfight.velvet_fortune": "Fortune de velours",
 	
 	"item.meetyourfight.desc.luck": "Affecté par la chance",
 	
 	"item.meetyourfight.fossil_bait": "Appât fossile",
 	"item.meetyourfight.fossil_bait.desc": "Invoque Gueule-des-marais",
+	"item.meetyourfight.fossil_bait.gear": "pierre ou fer",
 	"item.meetyourfight.mossy_tooth": "Dent moussue",
 	"item.meetyourfight.bone_raker": "Ratisseur d'os",
 	"item.meetyourfight.depth_star": "Étoile des profondeurs",
 	"item.meetyourfight.depth_star.desc": "Peut charger une onde de choc à courte portée",
+	"item.meetyourfight.depth_star.desc2": "Les dégâts augmentent avec les dégâts d'attaque",
 	"item.meetyourfight.caged_heart": "Coeur en cage",
-	"item.meetyourfight.caged_heart.desc": "Réduit les dégâts qui dépassent 1/4 de la vie max",
+	"item.meetyourfight.caged_heart.desc": "Réduit de %2$d%% les dégâts qui dépassent %1$d%% de la vie max",
 	"item.meetyourfight.marshy_delight": "Délice des marais",
 	
 	"item.meetyourfight.dusk_key": "Clé du crépuscule",
 	"item.meetyourfight.dusk_key.desc": "Invoque Rosalyne, lame du crépuscule",
+	"item.meetyourfight.dusk_key.gear": "Netherite",
 	"item.meetyourfight.violet_bloom": "Floraison violette",
 	"item.meetyourfight.twilights_thorn": "Épine du soir",
 	"item.meetyourfight.wilted_ideals": "Idéaux fanés",
-	"item.meetyourfight.wilted_ideals.desc": "Augmente tous les dégâts infligés",
+	"item.meetyourfight.wilted_ideals.desc": "Augmente tous les dégâts infligés de %1$d%%",
 	"item.meetyourfight.blossoming_mind": "Esprit fleurissant",
-	"item.meetyourfight.blossoming_mind.desc": "Augmente l'expérience donné par les monstres",
+	"item.meetyourfight.blossoming_mind.desc": "Augmente l'expérience donnée par les monstres de %1$d%%",
 	"item.meetyourfight.tomb_planter": "Planteur de tombes",
 	"item.meetyourfight.tomb_planter.desc": "Fertilise l'emplacement des monstres terrestres tués",
 	"item.meetyourfight.petal_cream": "Crême aux pétales",
 	
 	"item.meetyourfight.music_disc_swampjaw": "Disque",
 	"item.meetyourfight.music_disc_bellringer": "Disque",
+	"item.meetyourfight.music_disc_fortuna": "Disque",
 	"item.meetyourfight.music_disc_rosalyne": "Disque",
+
+	"block.meetyourfight.bellringer_head": "Tête de Sonneur",
+	"block.meetyourfight.dame_fortuna_head": "Tête de Dame Fortuna",
+	"block.meetyourfight.swampjaw_head": "Crâne réduit de Gueule-des-marais",
+	"block.meetyourfight.rosalyne_head": "Tête de Rosalyne",
+	"block.meetyourfight.rosalyne_head_cracked": "Tête brisée de Rosalyne",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "Oeuf d'apparition de Sonneur",
 	"item.meetyourfight.dame_fortuna_spawn_egg": "Oeuf d'apparition de Dame Fortuna",
@@ -82,6 +97,7 @@
 	"subtitles.meetyourfight.entity.dame_fortuna.spin.start": "Dame Fortuna commence à tourner",
 	"subtitles.meetyourfight.entity.dame_fortuna.spin.stop": "Dame Fortuna arrête de tourner",
 	"subtitles.meetyourfight.entity.dame_fortuna.snap": "Claquement de doigts",
+	"subtitles.meetyourfight.entity.dame_fortuna.clap": "Claquement de mains",
 
 	"subtitles.meetyourfight.entity.swampjaw.idle": "Gueule-des-marais grogne",
 	"subtitles.meetyourfight.entity.swampjaw.hurt": "Gueule-des-marais blessé",
