--- a/src/main/resources/assets/meetyourfight/lang/ko_kr.json
+++ b/src/main/resources/assets/meetyourfight/lang/ko_kr.json
@@ -38,6 +38,7 @@
 	
 	"item.meetyourfight.music_disc_swampjaw": "음반",
 	"item.meetyourfight.music_disc_bellringer": "음반",
+	"item.meetyourfight.music_disc_fortuna": "음반",
 	"item.meetyourfight.music_disc_rosalyne": "음반",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "종을 울리는 자 생성 알",
