--- a/src/main/resources/assets/meetyourfight/lang/ru_ru.json
+++ b/src/main/resources/assets/meetyourfight/lang/ru_ru.json
@@ -50,6 +50,7 @@
 
 	"item.meetyourfight.music_disc_swampjaw": "Музыкальный диск",
 	"item.meetyourfight.music_disc_bellringer": "Музыкальный диск",
+	"item.meetyourfight.music_disc_fortuna": "Музыкальный диск",
 	"item.meetyourfight.music_disc_rosalyne": "Музыкальный диск",
 
 	"item.meetyourfight.bellringer_spawn_egg": "Яйцо призыва звонаря",
