--- a/src/main/resources/assets/meetyourfight/lang/zh_cn.json
+++ b/src/main/resources/assets/meetyourfight/lang/zh_cn.json
@@ -50,6 +50,7 @@
 	
 	"item.meetyourfight.music_disc_swampjaw": "音乐唱片",
 	"item.meetyourfight.music_disc_bellringer": "音乐唱片",
+	"item.meetyourfight.music_disc_fortuna": "音乐唱片",
 	"item.meetyourfight.music_disc_rosalyne": "音乐唱片",
 	
 	"item.meetyourfight.bellringer_spawn_egg": "敲钟人刷怪蛋",
